--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,14 @@
         <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Railway Controller</title>
+        <meta name="description" content="Model railway point controller." />
+        <link
+            rel="apple-touch-icon"
+            href="/apple-touch-icon.png"
+            sizes="180x180"
+        />
+        <link rel="mask-icon" href="/mask-icon.svg" color="#000000" />
+        <meta name="theme-color" content="#000000" />
     </head>
     <body>
         <div id="root"></div>
